# ni-device-qa-skills

./: .env.example  .gitignore  README.md  agent.py  api.py  dcpower_c_api_minified.md  dcpower_c_api_programming_api.md  doc_processor.py  minify_c_api  pyproject.toml  server.py  split_c_api.py  standalone_tasks_api.py  test_llm.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  sessions.ts
skills/: metadata.json
skills/docs/: dcpower_c_api_attributes_advanced.md  dcpower_c_api_attributes_device_specific.md  dcpower_c_api_attributes_events.md  dcpower_c_api_attributes_general.md  dcpower_c_api_attributes_inherent_ivi.md  dcpower_c_api_attributes_lcr.md  dcpower_c_api_attributes_measure.md  dcpower_c_api_attributes_source.md  dcpower_c_api_attributes_supported.md  dcpower_c_api_functions.md  dcpower_c_api_functions_calibration.md  dcpower_c_api_functions_control.md  dcpower_c_api_functions_init_close.md  dcpower_c_api_functions_measure.md  dcpower_c_api_functions_query.md  dcpower_c_api_functions_set_get_attribute.md  dcpower_c_api_functions_source.md  dcpower_c_api_functions_supported.md  dcpower_c_api_functions_triggers_events.md  dcpower_c_api_functions_utility.md  dcpower_c_api_lcr.md  dcpower_c_api_measure.md  dcpower_c_api_source.md  dcpower_user_manual.md  pxie_4135_specifications.md  pxie_4135_user_manual.md  pxie_4136_specifications.md  pxie_4137_specifications.md  pxie_4137_userr_manual.md  pxie_4138_specifications.md  (+23 more)
tests/: test_standalone_tasks_api.py  user-prompt_001.txt
(+21 files in other folders)
