[project]
name = "ni-device-qa-skills"
version = "0.1.0"
description = "AI agent for answering NI hardware device questions using skill-based knowledge retrieval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.0",
    "mcp>=1.26.0",
    "mineru[all]",
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
